--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: aumoreno < aumoreno@student.42madrid.co    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/09/25 10:38:38 by aumoreno          #+#    #+#              #
-#    Updated: 2024/09/04 12:00:47 by aumoreno         ###   ########.fr        #
+#    Updated: 2024/09/09 12:35:36 by aumoreno         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,10 +23,10 @@ SRCS =  ft_isalpha.c  ft_isdigit.c  ft_isalnum.c  ft_isascii.c  ft_isprint.c \
 		ft_substr.c   ft_strjoin.c  ft_strtrim.c  ft_split.c    ft_itoa.c \
 		ft_strmapi.c  ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c \
 		ft_putnbr_fd.c  \
-		gnl/get_next_line.c \
-		gnl/get_next_line_utils.c \
-		gnl/get_next_line_bonus.c \
-		gnl/get_next_line_utils_bonus.c
+		# gnl/get_next_line.c \
+		# gnl/get_next_line_utils.c \
+		# gnl/get_next_line_bonus.c \
+		# gnl/get_next_line_utils_bonus.c
 
 
 OBJS = $(SRCS:.c=.o)
